# SchedulesFEUP

./: .gitignore  CMakeLists.txt  main.cpp
src/: ClassSchedule.cpp  ClassSchedule.h  ClassStudents.cpp  ClassStudents.h  ClassUC.cpp  ClassUC.h  Menu.cpp  Menu.h  Request.cpp  Request.h  ScheduleManager.cpp  ScheduleManager.h  Slot.cpp  Slot.h  Student.cpp  Student.h  StudentCard.cpp  StudentCard.h  Time.h  Turma.cpp  Turma.h  UC.cpp  UC.h  Year.cpp  Year.h
src/Time/: Time.cpp  Time.h
